--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "airtable": "^0.11.1",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
-    "xhr2": "^0.2.1"
+    "xhr2": "^0.2.1",
+    "xmlhttprequest": "^1.8.0"
   }
 }
