--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "netlify-cli": "^3.39.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "xmlhttprequest": "^1.8.0"
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0"
   }
 }
